# vake

./: .gitignore  2025_process.sh  2025_process_wp.bat  README.md  convert_wp_json.py  parse_wp_pdf.py  pyproject.toml  show_wp.py
